WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190203
Fix Disassembler-output on ARM Thumb2
https://bugs.webkit.org/show_bug.cgi?id=190203
Summary
Fix Disassembler-output on ARM Thumb2
Dominik Inführ
Reported
2018-10-02 08:54:18 PDT
Fix Disassembler-output on ARM Thumb2
Attachments
Patch
(1.64 KB, patch)
2018-10-02 09:11 PDT
,
Dominik Inführ
no flags
Details
Formatted Diff
Diff
Patch
(2.00 KB, patch)
2018-10-02 15:11 PDT
,
Dominik Inführ
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dominik Inführ
Comment 1
2018-10-02 09:11:48 PDT
Created
attachment 351395
[details]
Patch
Yusuke Suzuki
Comment 2
2018-10-02 09:18:48 PDT
Comment on
attachment 351395
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=351395&action=review
> Source/JavaScriptCore/ChangeLog:6 > + Disassembler on ARM-Thumb2 started on wrong address.
Please describe the detail about what was wrong and what this patch fixes :)
Dominik Inführ
Comment 3
2018-10-02 15:11:47 PDT
Created
attachment 351444
[details]
Patch
Dominik Inführ
Comment 4
2018-10-02 15:13:15 PDT
Sorry ;) Updated the ChangeLog. Thanks a lot!
Mark Lam
Comment 5
2018-10-02 15:13:37 PDT
Comment on
attachment 351444
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2018-10-02 15:53:34 PDT
Comment on
attachment 351444
[details]
Patch Clearing flags on attachment: 351444 Committed
r236768
: <
https://trac.webkit.org/changeset/236768
>
WebKit Commit Bot
Comment 7
2018-10-02 15:53:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-10-02 15:54:23 PDT
<
rdar://problem/44956795
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug